@@ -7,6 +7,8 @@
 
 defined('_JEXEC') or die();
 
+JHtml::_('behavior.framework');
+JHtml::_('behavior.modal');
 ?>
 
 <div class="liveupdate">
@@ -94,8 +96,10 @@ defined('_JEXEC') or die();
 
 					function showLiveUpdateReleaseNotes()
 					{
+						var liveupdateReleasenotes = $('liveupdate-releasenotes').clone();
+						
 						SqueezeBox.fromElement(
-							$('liveupdate-releasenotes'), {
+							liveupdateReleasenotes, {
 								handler: 'adopt',
 								size: {
 									x: 450,
