@@ -53,3 +53,4 @@ LIVEUPDATE_STABILITY_ALPHA="Alpha"
 LIVEUPDATE_STABILITY_BETA="Beta"
 LIVEUPDATE_STABILITY_RC="RC"
 LIVEUPDATE_STABILITY_STABLE="Stable"
+LIVEUPDATE_STABILITY_SVN="SVN"
