@@ -1,0 +1,46 @@
+; Akeeba Live Update
+; Copyright (c)2010-2012 Nicholas K. Dionysopoulos / AkeebaBackup.com
+; Licensed under the GNU LGPLv3 or later <http://www.gnu.org/copyleft/lesser.html>
+
+LIVEUPDATE_TASK_OVERVIEW="Live Update"
+
+LIVEUPDATE_NOTSUPPORTED_HEAD="Live Update ei ole tuettu tällä palvelimella"
+LIVEUPDATE_NOTSUPPORTED_INFO="Palvelimesi mukaan Live Update ei ole tuettu. Ota yhteyttä palveluntarjoajaasi ja pyydä heitä ottamaan cURL PHP laajennus tai URL fopen() lisätoiminnot käyttöön. Jos nämä ovat jo käytössä, pyydä heitä muuttamaan palomuurinsa asetuksia niin, että se sallii yhteydet seuraavaan osoitteeseen:";
+LIVEUPDATE_NOTSUPPORTED_ALTMETHOD="Voit aina päivittää <var>%s</var> lisäosan käymällä sivustollamme, lataamalla viimeisimmän version ja asentamalla sen Joomla! lisäosien asennuksella."
+
+LIVEUPDATE_STUCK_HEAD="Live Update on havainnut kaatuneensa"
+LIVEUPDATE_STUCK_INFO="Live Update on havainnut, että se kaatui edellisellä kerralla päivitystä hakiessaan. Yleensä tämä johtuu palvelimestä, joka pyrkii estämään yhteydet muille palvelimille. Jos haluat yrittää päivitystietojen hakemista uudelleen, napsauta &quot;Päivitä päivitystiedot&quot; painiketta. Jos tästä seuraa tyhjä sivu, ota yhteyttä palveluntarjoajaasi ja ilmoita ongelmasta."
+
+LIVEUPDATE_ERROR_NEEDSAUTH="Sinun täytyy syöttää pyydetty käyttäjätunniste komponentin asetuksissa ennenkuin voit päivittää viimeisimpään versioon. Päivityspainike pysyy estettynä siihen asti."
+LIVEUPDATE_HASUPDATES_HEAD="Uusi versio on saatavilla"
+LIVEUPDATE_NOUPDATES_HEAD="Sinulla on jo uusin versio"
+LIVEUPDATE_CURRENTVERSION="Asennettu versio"
+LIVEUPDATE_LATESTVERSION="Uusin versio"
+LIVEUPDATE_LATESTRELEASED="Uusimman julkaisupäivä"
+LIVEUPDATE_DOWNLOADURL="Suora latauslinkki"
+
+LIVEUPDATE_REFRESH_INFO="Päivitä päivitystiedot"
+LIVEUPDATE_DO_UPDATE="Päivitä uusimpaan versioon"
+
+LIVEUPDATE_FTP_REQUIRED="Live Update havaitsi, että se tarvitsee FTP yhteyden ladatakseen päivityksesi, mutta FTP tietoja ei ole asetettu Joomla! asetuksissa.<br/><br/>Syötä FTP tunnus ja salasana päivittääksesi."
+LIVEUPDATE_FTP="FTP tiedot"
+LIVEUPDATE_FTPUSERNAME="FTP käyttäjänimi"
+LIVEUPDATE_FTPPASSWORD="FTP salasana"
+LIVEUPDATE_DOWNLOAD_AND_INSTALL="Lataa ja asenna päivitys"
+
+LIVEUPDATE_DOWNLOAD_FAILED="Päivityspaketin lataaminen epäonnistui. Varmista, että temp-kansioom voi kirjoittaa tai Joomla! FTP toiminnot on sallittu sivuston asetuksissa."
+LIVEUPDATE_EXTRACT_FAILED="Päivityspaketin purkaminen epäonnistui. Yritä päivittää lisäosa manuaalisesti."
+
+LIVEUPDATE_INVALID_PACKAGE_TYPE="Paketin tyyppi ei kelpaa. Päivitystä ei voida tehdä."
+LIVEUPDATE_INSTALLEXT="Asenna %s %s"
+LIVEUPDATE_ERROR="Virhe"
+LIVEUPDATE_SUCCESS="Onnistui"
+
+LIVEUPDATE_ICON_UNSUPPORTED="Live Update ei tuettu"
+LIVEUPDATE_ICON_CRASHED="Live Update kaatui"
+LIVEUPDATE_ICON_CURRENT="Sinulla on uusin versio"
+LIVEUPDATE_ICON_UPDATES="Päivitys löydetty! Napsauta päivittääksesi."
+
+LIVEUPDATE_RELEASEINFO="Tietoja"
+LIVEUPDATE_RELEASENOTES="Julkaisutiedot"
+LIVEUPDATE_READMOREINFO="Lue lisää"
