@@ -1,3 +1,7 @@
+24-December-2012 Michael Babker
+~ Move media elements to the Joomla! media folder
+~ Update LiveUpdate
+
 17-November-2012 Michael Babker
 + Add a style config for the player
 
